error_msgs/error_udp_down.log
vboxuser@ubuntu:~/Downloads/ns-allinone-3.40/ns-3.40$ ./ns3 run scratch/test_4trafego.cc 
[  0%] Building CXX object scratch/CMakeFiles/scratch_test_4trafego.dir/test_4trafego.cc.o
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4trafego.cc: In lambda function:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4trafego.cc:292:30: error: no matching function for call to ‘ns3::Ipv6StaticRouting::RemoveRoute(ns3::Ipv6RoutingTableEntry)’
  292 |         srClient->RemoveRoute(srClient->GetDefaultRoute());
      |         ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/ipv6-static-routing.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/internet/helper/ipv6-static-routing-helper.h:24,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/ipv6-static-routing-helper.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/internet-module.h:18,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4trafego.cc:5:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/internet/model/ipv6-static-routing.h:184:10: note: candidate: ‘void ns3::Ipv6StaticRouting::RemoveRoute(uint32_t)’
  184 |     void RemoveRoute(uint32_t i);
      |          ^~~~~~~~~~~
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/internet/model/ipv6-static-routing.h:184:31: note:   no known conversion for argument 1 from ‘ns3::Ipv6RoutingTableEntry’ to ‘uint32_t’ {aka ‘unsigned int’}
  184 |     void RemoveRoute(uint32_t i);
      |                      ~~~~~~~~~^
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/internet/model/ipv6-static-routing.h:193:10: note: candidate: ‘void ns3::Ipv6StaticRouting::RemoveRoute(ns3::Ipv6Address, ns3::Ipv6Prefix, uint32_t, ns3::Ipv6Address)’
  193 |     void RemoveRoute(Ipv6Address network,
      |          ^~~~~~~~~~~
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/internet/model/ipv6-static-routing.h:193:10: note:   candidate expects 4 arguments, 1 provided
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4trafego.cc: In function ‘int main(int, char**)’:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_4trafego.cc:171:12: warning: unused variable ‘centerOffset’ [-Wunused-variable]
  171 |     double centerOffset = spacing * 0.5;
      |            ^~~~~~~~~~~~
gmake[3]: *** [scratch/CMakeFiles/scratch_test_4trafego.dir/build.make:78: scratch/CMakeFiles/scratch_test_4trafego.dir/test_4trafego.cc.o] Erro 1
gmake[2]: *** [CMakeFiles/Makefile2:17601: scratch/CMakeFiles/scratch_test_4trafego.dir/all] Erro 2
gmake[1]: *** [CMakeFiles/Makefile2:17607: scratch/CMakeFiles/scratch_test_4trafego.dir/rule] Erro 2
gmake: *** [Makefile:5991: scratch_test_4trafego] Erro 2

